Fix underlines in buttons &  heading spacing
Buttons have been needing explicit fixes to underlined text because
there was a stylesheet rule for all link tags affecting them. This has
been removed, returning links to their usual state, and only links in
text-white sections (headers & footers) will have an explicit style now.

Post content headings didn't have quite enough margin bottom. They are
now more internally consistent, with 1.5*$spacer top margin and
1.0*$spacer bottom margin.

--- a/_sass/categories.scss
+++ b/_sass/categories.scss
@@ -26,12 +26,7 @@
   margin-left: auto;
   padding-bottom: $spacer/4;
   padding-top: $spacer/4;
-  text-decoration: none;
   width: fit-content;
-
-  &:hover {
-    text-decoration: none;
-  }
 }
 
 .card-header-tab + .card-img-top {
