--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -10,7 +10,6 @@
 
   .card-title-link {
     color: inherit;
-    text-decoration: none;
   }
 
   .footnotes {
