--- a/_sass/navbar.scss
+++ b/_sass/navbar.scss
@@ -3,12 +3,3 @@
     background-color: transparent!important;
   }
 }
-
-.navbar-brand {
-  text-decoration: none;
-}
-
-.nav-link {
-  text-decoration: none;
-}
-
