--- a/css/site.scss
+++ b/css/site.scss
@@ -22,16 +22,7 @@
   h1, h2, h3, h4, h5, h6,
   .h1, .h2, .h3, .h4, .h5, .h6 {
     margin-top: $spacer * 3 / 2;
-  }
-}
-
-a {
-  color: $gray-700;
-  font-weight: 400;
-  text-decoration: underline;
-  text-decoration-style: dotted;
-  &:hover {
-    color: $gray-800;
+    margin-bottom: $spacer;
   }
 }
 
